bad/assign_new_array_array_array.example_compiler_output
ERROR
[1mbad/assign_new_array_array_array.lat:4:15: [1;31merror: [0;1mleft side is not assignable[m
	new int[][3] = new int[3];
	             [1;32m^[m
[1mbad/assign_new_array_array_array.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	new int[][3] = new int[3];
	[1;32m^[m
